<resources>
    <string name="app_name">源汇地图</string>
    <string name="splash_slogan">源汇地图\n智能监控</string>
    <string name="splash_mushiny">牧星智能</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="splash_copyright">Copyright \u00a9 </string>
    <string name="power_good">电量良好</string>
    <string name="power_critical">电量临界</string>
    <string name="power_low">电量不足</string>
    <string name="power_suspended">电量暂停</string>
    <string name="power_warning">小车电量警戒</string>
    <string name="str_connect_rabbitmq">开始连接RabbitMQ</string>
    <string name="boxfragment_map_completion">地图绘制完成</string>
    <string name="boxfragment_warm_tip">温馨提示</string>
    <string name="boxfragment_rabbitmq_connection_successful">RabbitMQ连接成功！</string>
    <string name="boxfragment_doesnot_have_a_pod">当前工作站没有pod</string>
    <string name="boxfragment_charging_failure_data_parsing_exceptions">充电故障数据解析异常：</string>
    <string name="boxfragment_exception_parsing_for_AGV_current_path_information_data">AGV当前路径信息数据解析异常：</string>
    <string name="str_please_select">请选择</string>
    <string name="boxfragment_please_select_a_warehouse">请选择仓库</string>
    <string name="boxfragment_please_select_a_map">请选择地图</string>
    <string name="boxfragment_start_mapping">开始绘制地图......</string>
    <string name="boxfragment_the_warehouse_data_is_empty">仓库数据为空</string>
    <string name="boxfragment_current_warehouse_name">当前仓库名称：</string>
    <string name="boxfragment_please_select_the_warehouse_first">请先选择仓库</string>
    <string name="boxfragment_current_map_name">当前地图名称：</string>
    <string name="boxfragment_read_or_write_file_permissions_not_enabled">读写文件权限未开启</string>
    <string name="boxfragment_the_current_region_is_not_walkable">当前区域是不可走区域</string>
    <string name="boxfragment_please_click_the_car_on_the_map">请点击地图上的小车</string>
    <string name="boxfragment_restart_and_resend_car_no">重启重发小车</string>
    <string name="boxfragment_cancel">取消</string>
    <string name="boxfragment_ok">好的</string>
    <string name="boxfragment_click_car_first_then_click_the_option">请先点击地图上的小车，然后再点击该选项</string>
    <string name="boxfragment_move_up_one_cell">上移一格</string>
    <string name="boxfragment_move_down_one_cell">下移一格</string>
    <string name="boxfragment_move_left_one_cell">左移一格</string>
    <string name="boxfragment_move_right_one_cell">右移一格</string>
    <string name="boxfragment_to_establish_a_single_point_safety_area">单个点位安全区域建立......</string>
    <string name="boxfragment_a_single_point_establishing_exception_safety_area">单个点位安全区域建立异常：</string>
    <string name="boxfragment_single_point_safety_area_removed">单个点位安全区域解除......</string>
    <string name="boxfragment_single_point_safety_area_unlocks_exception">单个点位安全区域解除异常：</string>
    <string name="boxgragment_careful_peration_1">亲爱的工程师！谨慎操作！确定在地址格：</string>
    <string name="boxfragment_create_a_safe_area_around_it">周围一圈建立安全区域？</string>
    <string name="boxfragment_safety_area_set_up">安全区域建立......</string>
    <string name="boxgragment_careful_peration_2">亲爱的工程师！谨慎操作！确定将地址格：</string>
    <string name="boxfragment_A_circle_around_the_safety_area_to_remove">周围一圈的安全区域解除？</string>
    <string name="boxfragment_Safety_area_to_remove">安全区域解除......</string>
    <string name="boxfragment_Release_the_pod">释放pod</string>
    <string name="boxfragment_Determine_release_POD">确定释放POD？</string>
    <string name="boxfragment_The_car_after_the_restart_lock_unlock_anomalies">小车重启后锁格解锁异常：</string>
    <string name="boxfragment_The_original_lock_path_information_is_empty">原锁格路径信息为空</string>
    <string name="boxfragment_Establish_safe_area_exceptions">建立安全区域异常：</string>
    <string name="boxfragment_unlock_safe_zone_exception">解除安全区域异常：</string>
    <string name="boxfragment_Agv_data_parsing_exceptions">小车数据解析异常：</string>
    <string name="str_map_drawAgain">地图重选</string>
    <string name="boxfragment_The_map_has_been_zoomed_to_its_maximum_size">地图已经缩放到最大</string>
    <string name="boxfragment_The_map_has_been_zoomed_to_its_minimum_size">地图已经缩放到最小</string>
    <string name="boxfragment_Problem_has_been_solved_cancel_the_error_message">问题已解决，取消错误提示？</string>
    <string name="boxfragment_Map_drawn_successfully">地图绘制成功</string>
    <string name="boxfragment_Charging_pile_fault">充电桩故障</string>
    <string name="boxfragment_The_ID_of_the_charging_pile">充电桩的ID：</string>
    <string name="boxfragment_Description">描述：</string>
    <string name="boxfragment_time">时间：</string>
    <string name="boxfragment_Did_not_find_fault">未发现故障</string>
    <string name="boxfragment_initializing">初始化......</string>
    <string name="boxfragment_Workstation_to_Angle_for_exceptions">工作站朝向角度获取异常：</string>
    <string name="boxfragment_charging_pile_data_parsing_exceptions">充电桩数据解析异常：</string>
    <string name="boxfragment_Resend_task">重发任务......</string>
    <string name="boxfragment_Resend_task_successful">重发任务成功</string>
    <string name="boxfragment_Getting_pod_information">正在获取pod信息......</string>
    <string name="boxfragment_Pod_information_retrieval_failed">pod信息获取失败</string>
    <string name="boxfragment_Pod_is_being_released">正在释放pod......</string>
    <string name="boxfragment_Workstation_release_pod_success">工作站释放pod成功</string>
    <string name="boxfragment_Pod_release_results_returned_empty">pod释放返回结果为空</string>
    <string name="boxfragment_Pod_release_failed">pod释放失败</string>
    <string name="battery_fragment_no_car">暂无小车</string>
    <string name="battery_fragment_The_total_number_of_cars_is">小车数量总计</string>
    <string name="battery_fragment_tai">台</string>
    <string name="battery_fragment_Existing_threshold_power_car">存在临界值电量小车，</string>
    <string name="battery_fragment_Existing_low_power_car">存在电量不足小车，</string>
    <string name="battery_fragment_Existing_suspended_power_car">存在电量暂停小车，</string>
    <string name="battery_fragment_Please_pay_attention_to_see_the_car_power_value">请注意查看小车的电量值情况</string>
    <string name="str_battery_fine">电量良好（50%~100%）</string>
    <string name="str_battery_crisis">电量临界（30%~50%）</string>
    <string name="str_battery_low">电量不足（10%~30%）</string>
    <string name="str_battery_pause">电量暂停（0~10%）</string>
    <string name="str_edittext_hint">输入小车id</string>
    <string name="str_listview_car_id">小车 ID</string>
    <string name="str_listview_car_battery_percent">电量百分比（状态）</string>
    <string name="str_listview_car_battery_voltage">电池电压</string>
    <string name="battery_fragment_I_see">我知道了</string>
    <string name="battery_fragment_The_car_battery_information_data_anomalies">小车电量信息数据异常</string>
    <string name="battery_fragment_Car_power">小车电量</string>
    <string name="battery_fragment_Data_already_all_loaded">数据已经全部加载</string>
    <string name="other_other">其他</string>
    <string name="other_Information_obtained_successfully">信息获取成功</string>
    <string name="other_Offline_successfully">小车下线成功</string>
    <string name="other_Successfully_drive_pod_back_to_storage">成功驱动pod回存储区</string>
    <string name="other_Address_does_not_exist">地址不存在</string>
    <string name="other_Check_address_status">查看地址状态</string>
    <string name="other_POD_information_is_empty">POD信息为空</string>
    <string name="other_Check_the_POD_information">查看POD信息</string>
    <string name="other_The_car_information_is_empty">小车信息为空</string>
    <string name="other_Check_the_status_of_a_car">查看某小车状态</string>
    <string name="other_Please_enter_the_id_of_the_car">请输入小车的 id</string>
    <string name="other_Please_enter_the_pod_id">请输入pod的 id</string>
    <string name="other_Please_enter_the_address">请输入地址</string>
    <string name="other_Offline_agv">下线AGV</string>
    <string name="other_Careful_operation_Confirm_the_offline_AGV">谨慎操作！确定下线该AGV？</string>
    <string name="other_Drive_the_pod_to_the_target_point">驱动pod去目标点位（可用存储区）</string>
    <string name="other_Drive_pod">驱动</string>
    <string name="other_to_target">号POD去目标点位</string>
    <string name="other_Please_operate_carefully">？（请谨慎操作！！！）</string>
    <string name="other_Pod_cannot_be_empty_or_target_point_cannot_be_empty">pod不能为空 或 目标点位不能为空</string>
    <string name="other_Update_the_pod_address">更新pod地址</string>
    <string name="other_update_pod">更新 </string>
    <string name="other_to_target_address">号POD的地址为 </string>
    <string name="other_Pod_cannot_be_empty_or_update_addres_cannot_be_empty">pod不能为空 或 更新地址不能为空</string>
    <string name="other_Release_pod_status">释放pod状态</string>
    <string name="other_Determine_the_release_pod_status">确定释放pod状态？</string>
    <string name="other_Update_address_state">更新地址状态</string>
    <string name="other_Determine_the_update_address_status">确定更新地址状态？</string>
    <string name="other_Address_input_cannot_be_empty">地址输入不能为空</string>
    <string name="other_Clear_the_charging_pile_fault">清除充电桩故障</string>
    <string name="other_Please_enter_the_charging_pile_type_or_charging_id">请输入充电桩类型或者充电桩 id</string>
    <string name="other_Dear_engineer_Confirm_to_clear_the_charging_pile_fault">亲爱的工程师！确定清除该充电桩故障？</string>
    <string name="other_The_command_to_clear_the_charging_pile_fault_has_been_issued">清除充电桩故障指令已发布</string>
    <string name="other_Update_the_car_available">更新小车可用</string>
    <string name="other_Sure_to_update_the_car_available">确定更新该小车可用？</string>
    <string name="other_The_agv_has_been_updated_to_be_available">已更新该小车可用</string>
    <string name="other_Update_agv_available_failed">更新小车可用失败</string>
    <string name="other_loading">加载中......</string>
    <string name="other_Update_address_state_of_success">更新地址状态成功</string>
    <string name="other_Update_address_status_failed">更新地址状态失败：</string>
    <string name="other_Check_if_the_pod_exists">请检查pod是否存在</string>
    <string name="other_POD_status_release_successfully">POD状态释放成功</string>
    <string name="other_POD_status_release_failed">释放pod状态失败：</string>
    <string name="other_POD_or_update_address_fill_out_is_not_correct">POD或更新地址填写不正确</string>
    <string name="other_Update_the_POD_address_failed">更新POD地址失败：</string>
    <string name="other_POD_or_target_address_fill_out_is_not_correct">POD或目标点位填写不正确</string>
    <string name="other_Failed_to_drive_pod_back_to_storage">驱动pod回存储区失败：</string>
    <string name="other_Offline_the_agv_failed">下线小车失败：</string>
    <string name="other_Check_the_address_state_failure">查看地址状态失败：</string>
    <string name="other_Check_the_POD_information_failure">查看POD信息失败：</string>
    <string name="other_This_agv_is_not_on_the_map">地图上没有此小车</string>
    <string name="other_Failed_to_check_agv_status">查看小车状态失败</string>
    <string name="boxView_Manual_lock_area_data_identifies_exception">手动锁格区域数据标识异常</string>
    <string name="boxView_Charging_pile_logo_agv_exception">充电桩标识小车异常</string>
    <string name="boxView_Workstation_identity_exception">工作站标识异常：</string>
    <string name="str_reboot_resend">重启重发</string>
    <string name="str_scram_resend">急停重发</string>
    <string name="str_establish_safety_area">建立安全区域（单个点位）</string>
    <string name="str_remove_safety_area">解除安全区域（单个点位）</string>
    <string name="str_Establish_a_safety_area">建立安全区域</string>
    <string name="str_remove_a_safety_area">解除安全区域</string>
    <string name="str_Please_enter_the_charging_pile_type">请输入充电桩类型</string>
    <string name="str_Please_enter_the_charging_pile_id">请输入充电桩的 id</string>
    <string name="str_send">发送</string>
    <string name="wcs_check_car_status">查看某小车的状态</string>
    <string name="wcs_speedlog_finish_trip_by_robot">输入AGV号码结束任务</string>
    <string name="wcs_speedlog_finish_trip_by_pod">输入POD号码结束任务</string>
    <string name="confirm">确认</string>
    <string name="row_hint">请输入行数</string>
    <string name="column_hint">请输入列数</string>
    <string name="str_agv_action">AGV动作</string>
    <string name="wcs_resend_order">急停重发</string>
    <string name="wcs_robot2Charge">下发充电任务</string>
    <string name="wcs_autoAssignAdnDrivePod">自动分配POD回存储区</string>
    <string name="wcs_driveRobotCarryPod">驱动小车驮pod去某地</string>
    <string name="wcs_driveRobot">驱动小车去某地</string>
</resources>