<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_row"
        android:hint="@string/row_hint"
        android:inputType="number"
        android:maxLength="3"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/et_column"
        android:maxLength="3"
        android:hint="@string/column_hint"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_margin="6dp"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
